added regex to the customer email, used ISBN in book valdation